# Orka

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  UI-REVIEW.md  VISION.md  agents.md  package-lock.json  package.json  tailwind.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
.qwen/: settings.json
app/: layout.tsx  not-found.tsx  page.tsx
contracts/: Cargo.toml  Makefile  README.md
contracts/escrow/: Cargo.toml
contracts/escrow-factory/: Cargo.toml
contracts/escrow-factory/src/: lib.rs  test.rs
contracts/escrow-factory/test_snapshots/test/: create_escrow_returns_instance.1.json
contracts/escrow/src/: errors.rs  lib.rs  test.rs  types.rs
contracts/escrow/test_snapshots/test/: approve_emits_orka_event.1.json  approve_is_intent_only_no_transfer.1.json  fund_emits_orka_event.1.json  fund_locks_usdc_in_contract.1.json  initialize_emits_orka_event.1.json  initialize_rejects_double_init.1.json  initialize_stores_config_and_returns_address.1.json  open_dispute_emits_orka_event.1.json  open_dispute_rejects_unauthorized_party.1.json  refund_emits_orka_event.1.json  refund_returns_full_amount_to_client.1.json  reject_emits_orka_event.1.json  reject_then_resubmit.1.json  release_funds_emits_orka_event.1.json  release_funds_fails_without_operator.1.json  release_funds_multi_sig_pays_freelancer.1.json  released_milestone_rejects_further_actions.1.json  resolve_dispute_arbiter_override_split.1.json  resolve_dispute_emits_orka_event.1.json  resolve_dispute_none_without_rules_errors.1.json  resolve_dispute_uses_pre_agreed_default.1.json  submit_emits_orka_event.1.json  submit_marks_funded_as_submitted.1.json
docs/: REPO_SETUP.md  USER_FLOW.md  XLM-DEPLOYMENT-COST-ESTIMATE.md
frontend/: .env.example  .gitignore  DESIGN.md  README.md  blog-UI-REVIEW.md  components.json  eslint.config.mjs  (+9 more)
services/: Cargo.toml  README.md
services/src/: auth.rs  bridge.rs  config.rs  custody.rs  indexer.rs  main.rs  router.rs  state.rs  stellar.rs
(+731 files in other folders)
