[package]
name = "orka-services"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
rand = "0.8"
stellar-xdr = { version = "25", default-features = false, features = ["std", "curr", "base64"] }
sha2 = "0.10"

[dev-dependencies]
rsa = "0.9"
