[package]
name = "orka-escrow-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, default-features = false, features = ["alloc"] }
escrow = { path = "../escrow", package = "orka-escrow" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
